--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,14 @@
     <!-- start header -->
     <header>
         <div class="container">
+            
+            <!-- خاص باسم المستخدم اللى سجل دخول -->
+            {% if session.user_id %}
+            <div class="profile-link">
+            <a href="{{ url_for('profile') }}">{{ session.user_name }}</a>
+            </div>
+            {% endif %}
+            <!--  -->
             <a href="#" class="logo">
                 <i class="fa-solid fa-hand-holding-heart"></i>
                 <span>صدقة</span>
