--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
             <div class="info">
                 <h1>امنح القليل <br>وساعد الكثير</h1>
                 <p style="max-width: 500px;">همزة الوصل بين المتبرع والمحتاجين</p>
-                <a href="{{ url_for('about') }}" class="btn">تعرف على المزيد</a>
+                <a href="#about" class="btn"> تعرف على المزيد</a>
             </div>
             <div class="image">
                 <img src="{{ url_for('static', filename='images/landing.jpg') }}" alt="">
@@ -116,5 +116,9 @@
    <!-- end about  -->
     
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <footer style="background-color: #f5f5f0; color: #333; text-align: center; padding: 15px; font-size: 14px; bottom: 0; width: 100%; box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);">
+        <p>&copy; 2025 منصة <span style="color: #619d4d; font-weight: 800;">صدقة</span> | جميع الحقوق محفوظة</p>
+        <p><a href="#" style="color: #619d4d; text-decoration: none;">الشروط والأحكام</a> | <a href="#" style="color: #619d4d; text-decoration: none;">سياسة الخصوصية</a></p>
+    </footer>
 </body>
 </html>
