--- a/templates/recommendation.html
+++ b/templates/recommendation.html
@@ -127,5 +127,9 @@
     var isLoggedIn = "{{ 'true' if session.get('user_id') else 'false' }}";
   </script>
   <script src="{{ url_for('static', filename='js/authCheck.js') }}"></script>
+  <footer style="background-color: #f5f5f0; color: #333; text-align: center; padding: 15px; font-size: 14px; bottom: 0; width: 100%; box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);">
+    <p>&copy; 2025 منصة <span style="color: #619d4d; font-weight: 800;">صدقة</span> | جميع الحقوق محفوظة</p>
+    <p><a href="#" style="color: #619d4d; text-decoration: none;">الشروط والأحكام</a> | <a href="#" style="color: #619d4d; text-decoration: none;">سياسة الخصوصية</a></p>
+</footer>
 </body>
 </html>
