--- a/static/css/master.css
+++ b/static/css/master.css
@@ -13,7 +13,7 @@
     --main-color-alt: #1787e0;
     --main-transition: 0.3s;
     --main-padding: 100px;
-    --section-background: #ececec;
+    --section-background: #ececec
 }
 
 .container {
@@ -249,6 +249,7 @@ header .fa-user {
     overflow: hidden;
     padding-top: 50px;
     height: calc(100vh);
+
 }
 
 .landing .container {
@@ -724,6 +725,8 @@ header .fa-user {
 
 /* end project */
 /* start pages */
+
+
 .page-landing.ghaza {
     padding: var(--main-padding);
     background-image: url(../images/ghaza-landing-resized.jpg);
@@ -857,7 +860,8 @@ header .fa-user {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 30px;
 }
-.about .about-box{
+
+.about .about-box {
     background: white;
     padding: 30px;
     border-radius: 8px;
@@ -866,15 +870,30 @@ header .fa-user {
     text-align: center;
     position: relative;
 }
-.about .about-box i{
+
+.about .about-box::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+
+}
+
+.about .about-box i {
     font-size: 35px;
     color: var(--main-color);
 }
-.about .about-box h2{
+
+.about .about-box h2 {
     padding: 20px;
 }
-.about .about-box p{
+
+.about .about-box p {
     line-height: 1.6;
     color: #777;
 }
+
 /* end about */
