--- a/templates/projects.html
+++ b/templates/projects.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- ربط ملفات CSS من مجلد static/css -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/all.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/master.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/all.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/normalize.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/master.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&family=Zain:ital,wght@0,200;0,300;0,400;0,700;0,800;0,900;1,300;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- start header -->
     <header>
         <div class="container">
-            <!-- رابط شعار الموقع يعيد للمسار الرئيسي -->
             <a href="{{ url_for('index') }}" class="logo">
                 <i class="fa-solid fa-hand-holding-heart"></i>
                 <span>صدقة</span>
@@ -25,27 +23,9 @@
                 <div></div>
             </div>
             <ul class="nav">
-                <!-- تعديل روابط القوائم لتوجيه المستخدمين للمسارات المناسبة -->
-                {% if session.user_id %}
-                <li>
-                <a href="{{ url_for('logout') }}" class="logout" style="background-color: white; color: black;">
-                        تسجيل الخروج
-                </a>
-                </li>
-                {% else %}
-                <li>
-                <a href="{{ url_for('register') }}" class="active" style="background-color: white; color: black;">
-                        تسجيل الدخول
-                </a>
-                </li>
-                {% endif %}
-
+                <li><a href="{{ url_for('register') }}" class="active" style="background-color: white; color: black;">تسجيل الدخول </a></li>
                 <li><a href="{{ url_for('recommendation') }}">التوصيات</a></li>
-                <li>
-                    <a href="{{ url_for('projects') }}" style="background-color: #619d4d; color: white;">
-                        مشاريع الخير
-                    </a>
-                </li>
+                <li><a href="{{ url_for('projects') }}" style="background-color: #619d4d; color: white;">مشاريع الخير</a></li>
                 <li><a href="{{ url_for('index') }}">الصفحة الرئيسية</a></li>
             </ul>
             <button class="toggle-btn" onclick="toggleCalculator()">💰 حاسبة الزكاة</button>
@@ -63,123 +43,108 @@
         </div>
     </header>
     <!-- end header -->
-    
     <!-- start projects -->
     <div class="projects">
         <div class="container">
             <h2>مشاريع الخير</h2>
             <div class="projects-container">
-                <!-- تكرار المشاريع مع استدعاء الصور من مجلد static/images -->
+                <!-- تكرار المشروع 20 مرة -->
                 <div class="project-card">
                     <img src="{{ url_for('static', filename='images/project 1.jpg') }}" alt="مشروع 1">
                     <h3>اغاثة غزة</h3>
-                    <button>اعرف المزيد</button>
+                    <a href="{{ url_for('ghaza') }}" class="btn">اعرف المزيد</a>  
                 </div>
                 <div class="project-card">
                     <img src="{{ url_for('static', filename='images/project 2.jpg') }}" alt="مشروع 2">
                     <h3>شهر رمضان</h3>
-                    <button>اعرف المزيد</button>
+                    <a href="{{ url_for('ramadan') }}" class="btn"> اعرف المزيد</a>
                 </div>
                 <div class="project-card">
                     <img src="{{ url_for('static', filename='images/project 3.jpg') }}" alt="مشروع 3">
                     <h3>عيد الفطر</h3>
-                    <button>اعرف المزيد</button>
+                    <a href="{{ url_for('aid') }}" class="btn">اعرف المزيد</a>  
                 </div>
                 <div class="project-card">
                     <img src="{{ url_for('static', filename='images/project 4.jpg') }}" alt="مشروع 4">
                     <h3>صك الأضحية</h3>
-                    <button>اعرف المزيد</button>
+                    <a href="{{ url_for('adha') }}" class="btn">اعرف المزيد</a>  
                 </div>
                 <div class="project-card">
                     <img src="{{ url_for('static', filename='images/project 5.jpg') }}" alt="مشروع 5">
                     <h3>الغارمين</h3>
-                    <button>اعرف المزيد</button>
+                    <a href="{{ url_for('gharmeen') }}" class="btn">اعرف المزيد</a>  
                 </div>
                 <div class="project-card">
                     <img src="{{ url_for('static', filename='images/project 6.jpg') }}" alt="مشروع 6">
                     <h3>برد الشتاء</h3>
-                    <button>اعرف المزيد</button>
+                    <a href="{{ url_for('shetaa') }}" class="btn">اعرف المزيد</a>  
                 </div>
                 <div class="project-card">
                     <img src="{{ url_for('static', filename='images/project 7.jpg') }}" alt="مشروع 7">
                     <h3>اطعام</h3>
-                    <button>اعرف المزيد</button>
+                    <a href="{{ url_for('etaam') }}" class="btn">اعرف المزيد</a>  
                 </div>
                 <div class="project-card">
                     <img src="{{ url_for('static', filename='images/project 8.jpg') }}" alt="مشروع 8">
                     <h3>علاج سرطان</h3>
-                    <button>اعرف المزيد</button>
+                    <a href="{{ url_for('sarataan') }}" class="btn">اعرف المزيد</a>  
                 </div>
                 <div class="project-card">
                     <img src="{{ url_for('static', filename='images/project 9.jpg') }}" alt="مشروع 9">
                     <h3>علاج القلب</h3>
-                    <button>اعرف المزيد</button>
+                    <a href="{{ url_for('heart') }}" class="btn">اعرف المزيد</a>  
                 </div>
                 <div class="project-card">
                     <img src="{{ url_for('static', filename='images/project 10.jpg') }}" alt="مشروع 10">
                     <h3>كفالة سرير وعناية مركزة</h3>
-                    <button>اعرف المزيد</button>
+                    <a href="{{ url_for('bed') }}" class="btn">اعرف المزيد</a>  
                 </div>
                 <div class="project-card">
                     <img src="{{ url_for('static', filename='images/project 11.jpg') }}" alt="مشروع 11">
                     <h3>ذوي الاحتياجات الخاصة</h3>
-                    <button>اعرف المزيد</button>
+                    <a href="{{ url_for('disabled') }}" class="btn">اعرف المزيد</a>  
                 </div>
                 <div class="project-card">
                     <img src="{{ url_for('static', filename='images/project 12.jpg') }}" alt="مشروع 12">
                     <h3>التعليم</h3>
-                    <button>اعرف المزيد</button>
+                    <a href="{{ url_for('education') }}" class="btn">اعرف المزيد</a>  
                 </div>
                 <div class="project-card">
                     <img src="{{ url_for('static', filename='images/project 13.jpg') }}" alt="مشروع 13">
                     <h3>سقي الماء</h3>
-                    <button>اعرف المزيد</button>
+                    <a href="{{ url_for('water') }}" class="btn">اعرف المزيد</a>  
                 </div>
                 <div class="project-card">
                     <img src="{{ url_for('static', filename='images/project 14.jpg') }}" alt="مشروع 14">
                     <h3>كفالة يتيم</h3>
-                    <button>اعرف المزيد</button>
+                    <a href="{{ url_for('orphan') }}" class="btn">اعرف المزيد</a>  
                 </div>
                 <div class="project-card">
                     <img src="{{ url_for('static', filename='images/project 15.jpg') }}" alt="مشروع 15">
                     <h3>كبار السن</h3>
-                    <button>اعرف المزيد</button>
+                    <a href="{{ url_for('old') }}" class="btn">اعرف المزيد</a>  
                 </div>
                 <div class="project-card">
                     <img src="{{ url_for('static', filename='images/project 16.jpg') }}" alt="مشروع 16">
                     <h3>تيسير زواج</h3>
-                    <button>اعرف المزيد</button>
+                    <a href="{{ url_for('marriage') }}" class="btn">اعرف المزيد</a>  
                 </div>
             </div>
         </div>
     </div>
     <!-- end projects -->
-    
     <!-- start footer -->
     <div class="footer">
         <div class="container">
-            <div class="logo"></div>
-            <div class="social">
-                <div class="social">
-                    <a href="#" class="facebook">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>           
-                    <a href="#" class="twitter">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a href="#" class="whatsapp">
-                        <i class="fa-brands fa-whatsapp"></i>
-                    </a>
-                    <a href="#" class="instgram">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                </div>
+            <div class="logo">
             </div>
         </div>
     </div>
+    <footer style="background-color: #f5f5f0; color: #333; text-align: center; padding: 15px; font-size: 14px; bottom: 0; width: 100%; box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);">
+        <p>&copy; 2025 منصة <span style="color: #619d4d; font-weight: 800;">صدقة</span> | جميع الحقوق محفوظة</p>
+        <p><a href="#" style="color: #619d4d; text-decoration: none;">الشروط والأحكام</a> | <a href="#" style="color: #619d4d; text-decoration: none;">سياسة الخصوصية</a></p>
+    </footer>
     <!-- end footer -->
-    
-    <!-- ربط ملف جافا سكريبت من مجلد static/js -->
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
