--- a/templates/projects.html
+++ b/templates/projects.html
@@ -23,7 +23,11 @@
                 <div></div>
             </div>
             <ul class="nav">
-                <li><a href="{{ url_for('register') }}" class="active" style="background-color: white; color: black;">تسجيل الدخول </a></li>
+                {% if session.user_id %}
+                <li><a href="{{ url_for('logout') }}" class="logout" style="background-color: white; color: black;">تسجيل الخروج</a></li>
+                {% else %}
+                <li><a href="{{ url_for('register') }}" class="active" style="background-color: white; color: black;">تسجيل الدخول</a></li>
+                {% endif %}
                 <li><a href="{{ url_for('recommendation') }}">التوصيات</a></li>
                 <li><a href="{{ url_for('projects') }}" style="background-color: #619d4d; color: white;">مشاريع الخير</a></li>
                 <li><a href="{{ url_for('index') }}">الصفحة الرئيسية</a></li>
