--- a/templates/recommendation.html
+++ b/templates/recommendation.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>التوصيات</title>
+  <title>Sadaka</title>
   <!-- ربط ملفات CSS الخارجية -->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/all.min.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
